crates/bijux-dna-pipelines/tests/snapshots/bijux-dna-pipelines__contracts__override_precedence.snap
---
source: crates/bijux-dna-pipelines/tests/contracts/defaults/override_precedence.rs
expression: "bijux_testkit::snapshot_normalize_json(&json)"
---
{
  "params": {},
  "rationales": {
    "fastq.trim_reads": "api override"
  },
  "tools": {
    "fastq.trim_reads": "trimmomatic"
  }
}
